# advent-of-code-2022

./: README.md  advent-of-code.cabal
app/: Main.hs
app/Control/Extra/: Monad.hs
app/Dailies/: December01_1.hs  December01_2.hs  December02_1.hs  December02_2.hs  December03_1.hs  December03_2.hs  December04_1.hs  December04_2.hs  December05_1.hs  December05_2.hs  January01.hs  January01_2.hs
app/Data/Extra/: List.hs
app/Text/Extra/: ReadP.hs
