cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hypebringer
maintainer:         hypebringer16@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
data-files:         data/*.txt

executable advent-of-code
    main-is:          Main.hs

    other-modules:    Dailies.December01_1
                    , Dailies.December01_2
                    , Dailies.December02_1
                    , Dailies.December02_2
                    , Dailies.December03_1
                    , Dailies.December03_2
                    , Dailies.December04_1
                    , Dailies.December04_2
                    , Paths_advent_of_code
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16
                    , newtype ^>=0.2
    hs-source-dirs:   app
    default-language: Haskell2010
